Fix: Add New Endpoint to Swagger UI
- Integrate auth_handler.go and history.go to user_handler
- Fix Directory Hiearchy in README.md
